--- a/lectures/2m-code Draw it.html
+++ b/lectures/2m-code Draw it.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 2m"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Due: Paper sketches for Ex 1
 code: Draw it!
@@ -11,4 +20,4 @@ Variables + Conditionals
 Introduce Ex 2: Free Patterns!
 Student Presentations
 
-
+</section>
