--- a/lectures/2w-VariablesConditions.html
+++ b/lectures/2w-VariablesConditions.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 2w"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Due: ex 2, critique
 topics: variables, conditions
@@ -8,7 +17,10 @@ due: Paper sketches for Ex 2
 studio: Free Patterns!
 student presentations: see schedule online
 
-review
+</section>
+
+<section data-markdown>
+review
 flow with setup and draw
 order of operation
 command-t tidy up
@@ -16,7 +28,10 @@ iterate your design on unruled paper FIRST!
 this is the same thumbnail practice you do in all your
 classes in design.
 
-basic functions
+</section>
+
+<section data-markdown>
+basic functions
 void setup(){
 //runs only once
 //such as size, background
@@ -26,7 +41,10 @@ void draw(){
 //such as shapes and movements
 }
 
-variables
+</section>
+
+<section data-markdown>
+variables
 Variables store data for later use in your program.
 
 variable (data) types
@@ -48,7 +66,10 @@ positions
 fonts
 ...and more
 
-using variables
+</section>
+
+<section data-markdown>
+using variables
 use variables to:
 - save yourself from typing the same thing over and over again.
 (example: three circles all have the same y position and diameter.)
@@ -57,7 +78,10 @@ use variables to:
 (example: a circle moves from left to right => its x position
 changes.)
 
-variable names
+</section>
+
+<section data-markdown>
+variable names
 Case sensitive!
 myContainer, my_container, my_Container
 theScore, the_score, the_Score
@@ -67,12 +91,18 @@ Cannot start with a number
 Must be unique names within your program
 Cannot be a keyword (such as rect, ellipse, setup or draw)
 
-keywords in Processing
+</section>
+
+<section data-markdown>
+keywords in Processing
 indicated with color
 note here: i just named y and d as my variables; it’s in
 black. black is safe!
 
-consistency
+</section>
+
+<section data-markdown>
+consistency
 Be consistent in naming conventions:
  
 can use: user_name
@@ -83,7 +113,10 @@ design variable names so that you can understand in a flash
 think of others who will be reading your code
 try to make it shorter rather than longer
 
-What is a good variable name for
+</section>
+
+<section data-markdown>
+What is a good variable name for
 temperature?
 t
 temp
@@ -91,7 +124,10 @@ temperature
 roomTemp
 roomTemperature
 
-follow the rules
+</section>
+
+<section data-markdown>
+follow the rules
 (even though that makes me cringe...lol)
 int temp;
 int int;
@@ -102,7 +138,10 @@ int lastTemp;
 int last_temp;
 int last-temp;
 
-int temp;
+</section>
+
+<section data-markdown>
+int temp;
 int int;
 
 //can’t use a keyword
@@ -122,7 +161,10 @@ int last-temp;
 
 //can’t use dash
 
-variable declaration and initialization
+</section>
+
+<section data-markdown>
+variable declaration and initialization
 If the entire program shares the same variable, we put it before setup() to
 declare what’s called “global variables” - variables used throughout the
 program.
@@ -133,7 +175,10 @@ x = 5;
 //declaration and initialization
 int x = 5;
 
-variable: assign values with =
+</section>
+
+<section data-markdown>
+variable: assign values with =
 int a;
 a = 3;
 a = 4*7/2; // can be an equation or expression
@@ -145,11 +190,17 @@ b = a + 45;
 
 rect(100, 100, b, a);
 
-let’s try it!
+</section>
+
+<section data-markdown>
+let’s try it!
 sketch_4_Variables.pde
 use variable to draw a circle.
 
-User Defined Variables
+</section>
+
+<section data-markdown>
+User Defined Variables
 step 1 declare the variable
 1. specify data type (number, a string of characters, etc)
 2. give a name
@@ -169,7 +220,10 @@ function(arguments)semicolon
 now we are going to learn a new thingsomething=something; //This means, circleX=some math operation;
 circleX=width/3; //width of the canvas divided by 3. here “width” is a keyword.
 
-Using Variables to Create Animation
+</section>
+
+<section data-markdown>
+Using Variables to Create Animation
 Animation:
 think flip-book!
 elements advance frame by frame
@@ -191,7 +245,10 @@ circleX=circleX+1;
 52+1
 //fourth x position …. the program will add forever.
 
-Incremental Variables - Speed of Animation
+</section>
+
+<section data-markdown>
+Incremental Variables - Speed of Animation
 circleX=circleX+1;
 50 +1 //second x position
 51+1
@@ -213,19 +270,28 @@ initial value =50
 Check out!
 sketch_4_1_Incremental_Variables.pde
 
-variable scope
+</section>
+
+<section data-markdown>
+variable scope
 When a variable is shared throughout the program,
 declare it above and outside setup() and draw()
 This is called a global variable
 
-variable scope
+</section>
+
+<section data-markdown>
+variable scope
 When a variable is created within a block of code,
 such as a function such as setup(), it can be used
 only within that block. In this case draw()will not
 know it.
 This is called a local variable
 
-system variables for dimensions
+</section>
+
+<section data-markdown>
+system variables for dimensions
 width // width in pixels of sketch size
 height // height in pixels of sketch size
 fullScreen // fullScreen
@@ -236,16 +302,25 @@ and height are only available after
 
 they have been declared using size();
 
-increment and decrement shorthand
+</section>
+
+<section data-markdown>
+increment and decrement shorthand
 x = x + 1; is the same as x++; (increment by 1)
 x = x - 1; is the same as x--; (decrement,increment by -1)
 x = x + 5; is the same as x+=5; (increment by 5)
 x = x - 5; is the same as x-=5; (decrement,increment by -5)
 
-let’s code - 6 variables!
+</section>
+
+<section data-markdown>
+let’s code - 6 variables!
 sketch_4_2_six_variables.pde
 
-Boolean expressions
+</section>
+
+<section data-markdown>
+Boolean expressions
 FYI- Link to Daniel Shiffman’s video:
 https://www.youtube.com/watch?v=wsI6N9hfW7E&list=PLRqwXV7Uu6YqykuLs00261JCqnL_NNZ_
 
@@ -257,7 +332,10 @@ x >20
 In this case, evaluation of the statement is
 needed.
 
-For the purpose of evaluation:
+</section>
+
+<section data-markdown>
+For the purpose of evaluation:
 relational operators
 != (not equal)
 < (less than)
@@ -273,7 +351,10 @@ logical operators
 
 These operators are C’s operators.
 
-conditional statements
+</section>
+
+<section data-markdown>
+conditional statements
 if
 Only do one thing, when there are two possibilities:
 Imagine you have 5 big apples and 5 small apples.
@@ -288,7 +369,10 @@ If it’s a small apple, then compost,
 else if it’s a big red apple, then put it in the red basket,
 else, put it in the black basket.
 
-syntax
+</section>
+
+<section data-markdown>
+syntax
 if (condition) {
 statements;
 }
@@ -300,14 +384,20 @@ background (0);
 If the condition inside the ( ) evaluates to be true, then,
 execute the code inside the { }. If not, do nothing.
 
-sketch_5_0_Boolean.pde
+</section>
+
+<section data-markdown>
+sketch_5_0_Boolean.pde
 
 If the x position of the mouse is greater than 200, then the background
 color is orange.
 Note: mouseX is in pink. This means “system variable”. Must follow
 syntax.
 
-sketch_5_0_Boolean.pde continued
+</section>
+
+<section data-markdown>
+sketch_5_0_Boolean.pde continued
 
 This code might run fine, but we are taking a chance.
 xPosition is of the variable type of float (decimals).
@@ -316,7 +406,10 @@ There is a chance that the program skips over the exact number of 360.
 It’s better to use xPosition>=width.
 Try xPosition=xPosition+3 to see the program skipping over 360.
 
-syntax for if else
+</section>
+
+<section data-markdown>
+syntax for if else
 if (condition) {
 statements
 } else {
@@ -333,7 +426,10 @@ If the condition inside the ( ) evaluates to be true, then,
 execute the code inside the { }. Else, execute the code
 inside the { } after the word “else”.
 
-syntax for AND OR
+</section>
+
+<section data-markdown>
+syntax for AND OR
 for AND, we use ampersands.
 if ((  )&&(  )){
 —
@@ -347,7 +443,10 @@ if ((  )||(  )) {
 —
 }
 
-sketch_5_1_if_else.pde
+</section>
+
+<section data-markdown>
+sketch_5_1_if_else.pde
 
 sketch_5_4_Bouncing_Ball.pde
 
@@ -355,11 +454,14 @@ sketch_5_2_and_or.pde
 
 sketch_5_5_Boolean_true_false.pde
 
-Yeah!! Now you have all the tools to program!!! All you need
+</section>
+
+<section data-markdown>
+Yeah!! Now you have all the tools to program!!! All you need
 is variables and conditions! Other things we learn in the
 future will help organize and make your code more efficient!
 Congratulations!
 
 Now, on to ex 2: Free Patterns!
 
-
+</section>
