--- a/lectures/3w-code Free Pattern.html
+++ b/lectures/3w-code Free Pattern.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 3w"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Hand back ex 1.
 
@@ -21,4 +30,4 @@ Student Presentations:
 Isabel Bagsik (John Cage)
 Belinda Huang (OULIPO)
 
-
+</section>
