--- a/lectures/4m-Loops.html
+++ b/lectures/4m-Loops.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 4m"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Due: Ex 2
 Loops
@@ -11,7 +20,10 @@ revisit: Change the World
 more on counting + code: eQuilt
 Student Presentations
 
-conditions
+</section>
+
+<section data-markdown>
+conditions
 Make sure to format your code!
 if (Tuesday) {
 eat tuna;
@@ -36,7 +48,10 @@ eat turkey;
 eat tofu;
 }
 
-conditions
+</section>
+
+<section data-markdown>
+conditions
 What’s wrong with this?
 if (Tuesday) {
 eat tuna;
@@ -46,7 +61,10 @@ eat tofu;
 eat turkey;
 }
 
-conditions
+</section>
+
+<section data-markdown>
+conditions
 What’s wrong with this?
 if (Tuesday) {
 eat tuna;
@@ -62,16 +80,28 @@ is ignored.
 syntax error: else has to come at the end, if Thursday is an
 exception.
 
-Loops
+</section>
 
-Loops are like the industrial revolution!
+<section data-markdown>
+Loops
+
+</section>
+
+<section data-markdown>
+Loops are like the industrial revolution!
 Repetitive tasks are done by the machine.
 
-two types of loops
+</section>
+
+<section data-markdown>
+two types of loops
 while loop
 for loop
 
-while loop
+</section>
+
+<section data-markdown>
+while loop
 The idea of taking a single concept and repeat it many
 many times.
 A while loop controls a sequence of repetitions. Ok, that’s
@@ -79,7 +109,10 @@ beautiful, because it saves so much time!
 However, loops MUST have an exist condition, or it will
 lock out! STUCK AND NEVER GET OUT!
 
-compare if to while
+</section>
+
+<section data-markdown>
+compare if to while
 In an if statement, if the evaluation inside the () is true, execute the
 statement ONCE; if the evaluation is false, don’t execute the statement.
 if ( boolean expression ){
@@ -94,7 +127,10 @@ statement;
 The code will run, while the condition inside the () is true. Once the
 condition is no longer met, it jumps out of the while loop.
 
-using if
+</section>
+
+<section data-markdown>
+using if
 
 using while
 
@@ -134,7 +170,10 @@ x=x+1;
 
 check out - sketch_6_0_while_loop.pde - //REVIEW EXAMPLE
 
-when does it come out of the while loop?
+</section>
+
+<section data-markdown>
+when does it come out of the while loop?
 float x=0;
 
 float x=0;
@@ -172,7 +211,10 @@ x=x+1;
 
 check out - sketch_6_0_while_loop.pde - //EXAMPLE 1
 
-how many circles did it produce?
+</section>
+
+<section data-markdown>
+how many circles did it produce?
 float x=0;
 
 float x=0;
@@ -209,7 +251,10 @@ x=x+100; //6 circles, where?
 }
 }
 
-use println(x); to help you debug
+</section>
+
+<section data-markdown>
+use println(x); to help you debug
 float x=0;
 
 float x=0;
@@ -248,12 +293,18 @@ x=x+1;
 
 check out - sketch_6_0_while_loop.pde - //EXAMPLE 1
 
-//EXAMPLE 2:
+</section>
+
+<section data-markdown>
+//EXAMPLE 2:
 How to symmetrically fit x amount of evenly spaced circles on a canvas?
 What is the spacing between the circles?
 x+=spacing;
 
-//EXAMPLE 2:
+</section>
+
+<section data-markdown>
+//EXAMPLE 2:
 Assuming a particular amount of padding on the left and right, the math is as
 follows: spacing = (width - 2*padding) / (number of circles - 1)
 
@@ -270,7 +321,10 @@ padding
 
 padding
 
-math is as follows: (width - 2*padding) / (number of circles - 1)
+</section>
+
+<section data-markdown>
+math is as follows: (width - 2*padding) / (number of circles - 1)
 (600-2*100)/(5-1)=100
 code is: x+=100;
 0
@@ -288,7 +342,10 @@ padding
 
 check out - sketch_6_0_while_loop.pde - //EXAMPLE 2
 
-loop dangers!
+</section>
+
+<section data-markdown>
+loop dangers!
 Loops MUST have an exist condition, or it will lock out!
 STUCK AND NEVER GET OUT!
 /*DANGER!! LOOP STUCK, even though all syntax is correct!
@@ -301,7 +358,10 @@ x=x-1;
 ellipse(x, 100, 20, 20);
 }
 
-two loops
+</section>
+
+<section data-markdown>
+two loops
 
 check out - sketch_6_1_two_loop_grid.pde - //EXAMPLE 1, 2
 //EXAMPLE 1: DRAW VERTICAL LINES.
@@ -342,7 +402,10 @@ y=y+50;
 }
 }
 
-while loops can draw infinitely!
+</section>
+
+<section data-markdown>
+while loops can draw infinitely!
 check out - sketch_6_1_two_loop_grid.pde - //EXAMPLE 3
 
 //EXAMPLE 3: USE LOOPS TO CREATE ANIMATION.
@@ -364,7 +427,10 @@ x+= random(10, 100);
 println(x);
 }
 
-for loop
+</section>
+
+<section data-markdown>
+for loop
 When you don’t need it to be infinite and forever. Great for
 controlling repetition. Can be identical to the while loop,
 except shorter.
@@ -375,7 +441,10 @@ statements;
 
 semicolon!
 
-the following blocks of codes are identical.
+</section>
+
+<section data-markdown>
+the following blocks of codes are identical.
 check out - sketch_6_2_for_loop.pde
 
 code uses the while loop:
@@ -389,7 +458,10 @@ for (int x=0; x<width; x=x+20) {
  line (x, 0, x, height);
 }
 
-Variable Scope AGAIN!
+</section>
+
+<section data-markdown>
+Variable Scope AGAIN!
 global variable: we declare at the very top.
 for example, at the very top of the code, we write:
 float x=0;
@@ -400,7 +472,10 @@ local in scope as possible.
 global variables don’t work well with for loops! as you can imagine
 by its very set up, it can get very confused.
 
-Here is a good example:
+</section>
+
+<section data-markdown>
+Here is a good example:
 void setup() {
   size (600, 400);
 }
@@ -415,14 +490,20 @@ void draw() {
 x here is a local variable; declare it right when you need to use it.
 check out - sketch_6_3_Variable_Scope.pde
 
-for loop: how many times to loop?
+</section>
+
+<section data-markdown>
+for loop: how many times to loop?
 There is a counting mechanism
 embedded in for loop.
 The most common variables used for
 generic counting:
 i, j and k
 
-for loop
+</section>
+
+<section data-markdown>
+for loop
 (desire 10 iterations) start at 0 and count up to 9
 for (int i=0; i<10; i=i+1) //i++
 
@@ -432,14 +513,20 @@ for (int i=0; i<100; i=i+10) //i+=10
 (desire 20 iterations) start at 100 and count down to 0 by 5
 for (int i=100; i>=0; i=i-5) //i-=5
 
-for loop: nested loops
+</section>
+
+<section data-markdown>
+for loop: nested loops
 Used in a situation where two or more variables needed to
 be evaluated.
 DIY graph paper!
 two sets of two for loops
 check out - graph_paper_10_px.pde
 
-void setup() {
+</section>
+
+<section data-markdown>
+void setup() {
 size(1000, 800);
 background(255);
 }
@@ -462,13 +549,19 @@ rect(50, 50, 900, 700); // rect box
 saveFrame("graph.tif");
 }
 
-i'm feeling loopy and iffy!...which one to use?
+</section>
+
+<section data-markdown>
+i'm feeling loopy and iffy!...which one to use?
 Use a while loop if you don’t know how many times you want
 the loop to execute (or based on an existing variable)
 Use a for loop if you know how many times you want to repeat
 Statement inside if only gets executed once
 
-loop vs. draw
+</section>
+
+<section data-markdown>
+loop vs. draw
 LOOP INSIDE OF DRAW
 inner loop (while or for) produces one frame of an animation.
 outer loop (draw):
@@ -478,7 +571,10 @@ step 2 - draw a frame according to what the while loop produces.
 ——
 This is how draw produces animation.
 
-check out - sketch_6_4_loop_vs_draw.pde
+</section>
+
+<section data-markdown>
+check out - sketch_6_4_loop_vs_draw.pde
 
 void setup () {
 size (600, 400);
@@ -499,7 +595,10 @@ x=x+20;
 // what if i want the lines to show up one by one?
 // this type of animation needs to be achieved in draw.
 
-check out - sketch_6_4_loop_vs_draw.pde
+</section>
+
+<section data-markdown>
+check out - sketch_6_4_loop_vs_draw.pde
 
 //Example 2: draw a vertical line one by one to the right.
 int x=50;
@@ -515,7 +614,10 @@ x=x+50;
 //this one goes by too fast. how to control the speed of animation? See
 sketch_6_4_loop_animation.
 
-check out - sketch_6_4_loop_animation.pde
+</section>
+
+<section data-markdown>
+check out - sketch_6_4_loop_animation.pde
 float frX=0; //flexible animation frame width, so that the while loop can meet exit condition.
 int aSpeed=1; //control advancing speed
 void setup () {
@@ -543,7 +645,10 @@ The animations goes like this: frame 1 - one line, frame 2 - two lines, frame 3 
 between. each frame.
 */
 
-today
+</section>
+
+<section data-markdown>
+today
 Due: Ex 2
 Loops
 Introduce Ex 3: eQuilt
@@ -556,4 +661,4 @@ revisit: Change the World
 more on counting + code: eQuilt
 Student Presentations
 
-
+</section>
