--- a/lectures/4w-Nested Loops If.html
+++ b/lectures/4w-Nested Loops If.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 4w"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Due: Paper sketches for Ex 3
 revisit: Change the World
@@ -11,7 +20,10 @@ Random and Transform + Generative Design
 Introduce Midterm
 Student Presentations
 
-check out - sketch_6_4_loop_animation.pde
+</section>
+
+<section data-markdown>
+check out - sketch_6_4_loop_animation.pde
 frameW
 float frameW=0;
 float spacing=20;
@@ -82,7 +94,10 @@ line #
 
 1 2 3
 
-check out - sketch_6_6_concentric_circles.pde
+</section>
+
+<section data-markdown>
+check out - sketch_6_6_concentric_circles.pde
 //DRAW 5 CONCENTRIC CIRCLES
 void setup () {
 size (100, 100);
@@ -108,7 +123,10 @@ ellipse (x, y, r, r);
 }
 }
 
-check out - sketch_6_6_concentric_circle_pattern.pde
+</section>
+
+<section data-markdown>
+check out - sketch_6_6_concentric_circle_pattern.pde
 //REPEATE IN X AND Y DIRECTIONS
 void draw () {
 for (float i=0; i<10; i++) {
@@ -132,9 +150,15 @@ ellipse (x, y, r, r);
 }
 }
 
-Nested Loops with ifs
+</section>
 
-//Modulo
+<section data-markdown>
+Nested Loops with ifs
+
+</section>
+
+<section data-markdown>
+//Modulo
 % is an operator called “mod"
 it returns the remainder from a mathematical division
 e.g. 3 % 2 = 1, because 3/2 has the remainder of 1
@@ -167,7 +191,10 @@ fill(255,0,0);
 fill(255,162,0);
 }
 
-//Modulo
+</section>
+
+<section data-markdown>
+//Modulo
 % is an operator called “mod"
 it returns the remainder from division
 e.g. 3 % 1 = 1, because 3/1 has the remainder of 1
@@ -183,7 +210,10 @@ stroke(255,162,0);
 check out - sketch_6_6_concentric_circle_pattern.pde
 //Mod Example
 
-check out - sketch_6_6_concentric_circle_pattern.pde
+</section>
+
+<section data-markdown>
+check out - sketch_6_6_concentric_circle_pattern.pde
 
 void draw () {
 for (float i=0; i<10; i++) {
@@ -213,7 +243,10 @@ ellipse (x, y, r, r);
 }
 }
 
-today
+</section>
+
+<section data-markdown>
+today
 Due: Paper sketches for Ex 3
 revisit: Change the World
 more on counting + code: eQuilt
@@ -226,4 +259,4 @@ Random and Transform + Generative Design
 Introduce Midterm
 Student Presentations
 
-
+</section>
