--- a/lectures/5w-PushPop.html
+++ b/lectures/5w-PushPop.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 5w"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Due: Component 1, 2, 3 of Midterm project
 CHANGE THE WORLD
@@ -12,14 +21,20 @@ Lab for component 5
 Functions
 Student Presentations
 
-a quick review from last class
+</section>
+
+<section data-markdown>
+a quick review from last class
 
 Transform
 translate
 rotate
 scale
 
-translate
+</section>
+
+<section data-markdown>
+translate
 
 translate(60,80);
 rect(20,20,40,40);
@@ -33,7 +48,10 @@ rect(0,0,40,40);
 
 Where is the center of rotation?
 
-sketch_14_1_basic_translate_rotate_scale.pde
+</section>
+
+<section data-markdown>
+sketch_14_1_basic_translate_rotate_scale.pde
 
 void setup() {
 size(500, 500);
@@ -53,7 +71,10 @@ rect(0, 0, 100, 50);
 
 The order of operation matters!
 
-What happens when you draw
+</section>
+
+<section data-markdown>
+What happens when you draw
 another shape after the coordinates
 have been
 translated
@@ -64,21 +85,36 @@ scaled
 
 The new transformed coordinates sticks with ya!
 
-Houston, we have a problem!
+</section>
+
+<section data-markdown>
+Houston, we have a problem!
 This makes my math WAY too complex!
 
-Solution:
+</section>
+
+<section data-markdown>
+Solution:
 Push/Pop matrix!
 
-Solution:
+</section>
+
+<section data-markdown>
+Solution:
 Push/Pop matrix to isolate transformations!
 
-pushMatrix() and popMatrix()
+</section>
+
+<section data-markdown>
+pushMatrix() and popMatrix()
 pushMatrix(); //saves current matrix
 popMatrix(); // restores last saved matrix
 draw(); // restores to default matrix
 
-sketch_14_PushPop.pde
+</section>
+
+<section data-markdown>
+sketch_14_PushPop.pde
 
 multiple translations
 //Multiple Translations
@@ -96,7 +132,10 @@ rect (0, 0, 15, 15);
 }
 //each time it draws, the coordinates are set to default.
 
-sketch_14_PushPop.pde
+</section>
+
+<section data-markdown>
+sketch_14_PushPop.pde
 
 multiple translations
 isolating transformations
@@ -130,21 +169,36 @@ rect (0, 0, 15, 15);
 }
 }
 
-if
+</section>
+
+<section data-markdown>
+if
 you want the transformation to propagate for each transformation to build on the last.
 don’t use Push/Pop matrix!
 
-a fun example on push pop
+</section>
+
+<section data-markdown>
+a fun example on push pop
 sketch_14_17_nested_pushpop.pde
 p.292
 
-first: a little math
+</section>
 
-logic for
+<section data-markdown>
+first: a little math
+
+</section>
+
+<section data-markdown>
+logic for
 sketch_14_17_nested
 _pushpop.pde
 
-today
+</section>
+
+<section data-markdown>
+today
 Due: Component 1, 2, 3 of Midterm project
 CHANGE THE WORLD
 Push Pop
@@ -158,4 +212,4 @@ Lab for component 5
 Functions
 Student Presentations
 
-
+</section>
