--- a/lectures/6m-Functions.html
+++ b/lectures/6m-Functions.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 6m"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Due: Component 4 from Midterm project
 Lab for component 5
@@ -11,25 +20,37 @@ Midterm project critique
 Introduce Real-life Proposal
 Student Presentations
 
-functions
+</section>
+
+<section data-markdown>
+functions
 It’s time to organize our codes with two key principles in
 object-orientated programming:
 Modularity (code an idea in sections)
 Reusability (use it again and again)
 
-We have been using pre-defined functions.
+</section>
+
+<section data-markdown>
+We have been using pre-defined functions.
 
 background(0);
 rect(0,0,100,100);
 We are calling existing functions.
 
-But, if want to use flower function …
+</section>
+
+<section data-markdown>
+But, if want to use flower function …
 
 flower(x,y);
 It doesn’t exist! You have to define
 it!
 
-user-defined (custom) functions
+</section>
+
+<section data-markdown>
+user-defined (custom) functions
 syntax:
 returnType name (_,_,_,_){
 }
@@ -37,14 +58,20 @@ returnType name (_,_,_,_){
 void flower() {
 }
 
-Where to put this function definition?
+</section>
+
+<section data-markdown>
+Where to put this function definition?
 
 typically, it goes below setup and draw
 BUT, IT MUST BE ITS OWN BLOCK
 OF CODE - NOT INSIDE OF draw
 call the flower function from draw
 
-sketch_7_1_Function_basics.pde
+</section>
+
+<section data-markdown>
+sketch_7_1_Function_basics.pde
 
 Define a flower ( ) function
 void setup () {
@@ -64,7 +91,10 @@ stroke(0, 255, 0);
 line (80, 110, 80, 180);
 }
 
-sketch_7_1_Function_basics.pde
+</section>
+
+<section data-markdown>
+sketch_7_1_Function_basics.pde
 
 call flower ( ) function 3 times
 with attributes
@@ -105,7 +135,10 @@ line (80+xLocation, 110+yLocation,
 80+xLocation, 180+yLocation);
 }
 
-a better way to write the flower
+</section>
+
+<section data-markdown>
+a better way to write the flower
 find a reference point in the graphics
 
 ellipse(x+13, y-10, 20, 20);
@@ -117,10 +150,16 @@ it’s easier.
 
 (x,y)
 
-modular code design:
+</section>
+
+<section data-markdown>
+modular code design:
 sketch_7_2_Modularity_with_Functions.pde
 
-modular code design:
+</section>
+
+<section data-markdown>
+modular code design:
 separate each component of the graphic group:
 - petals();
 - stem();
@@ -132,7 +171,10 @@ Or even,
 This way, you have flexibility in design when
 calling the functions.
 
-display, animate and evaluation
+</section>
+
+<section data-markdown>
+display, animate and evaluation
 sketch_7_2_Modularity_with_Functions.pde
 void draw() {
 background (255);
@@ -158,12 +200,18 @@ yspeed=yspeed*-1;
 }
 }
 
-what does void mean?
+</section>
+
+<section data-markdown>
+what does void mean?
 functions that don’t return a value.
 void means - no variable or object type
 returned.
 
-functions that returns value
+</section>
+
+<section data-markdown>
+functions that returns value
 void draw() {
 land(width/2, height/2);
 text("Pay Jack: $" + area(r), 100, 100);
@@ -183,7 +231,10 @@ return calculateArea;
 
 }
 
-sketch_function_void_return_values.pde
+</section>
+
+<section data-markdown>
+sketch_function_void_return_values.pde
 //*Jack gets paid for lease of his circular land.
 Enter an r to see $ amount. */
 float r=200;
@@ -205,7 +256,10 @@ float calculateArea=2*PI*r;
 return calculateArea;
 }
 
-today
+</section>
+
+<section data-markdown>
+today
 Due: Component 4 from Midterm project
 Lab for component 5
 Functions
@@ -218,4 +272,4 @@ Midterm project critique
 Introduce Real-life Proposal
 Student Presentations
 
-
+</section>
