--- a/lectures/8m-Array.html
+++ b/lectures/8m-Array.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 8m"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Due: Real-Life Proposal
 Array
@@ -15,7 +24,10 @@ Objects /
 Final Project - exchange, plan
 Student Presentations
 
-Two Variables
+</section>
+
+<section data-markdown>
+Two Variables
 float x1=-20;
 float x2=20;
 void setup () {
@@ -77,11 +89,17 @@ ellipse(x5,
 50);
 50);
 
-3000?!
+</section>
+
+<section data-markdown>
+3000?!
 
 Array, Not Variables
 
-arrays - the idea
+</section>
+
+<section data-markdown>
+arrays - the idea
 what if - I can tell the computer to generate and store
 3000 x positions float[ ] x=new float[3000];
 3000 y positions float[ ] y=new float[3000];
@@ -99,12 +117,18 @@ and do this 3000 times!
 
 —- use for loop
 
-arrays
+</section>
+
+<section data-markdown>
+arrays
 an array is a collection of variables of the same data type
 arrays can be collections of all data types:
 ints, floats, booleans, etc
 
-arrays
+</section>
+
+<section data-markdown>
+arrays
 variable:
 int x;
 
@@ -116,7 +140,10 @@ int[] x = new int[3000];
 //create an array of 3000 integer variables.
 Length of the array goes inside [ ].
 
-declare, create, assign
+</section>
+
+<section data-markdown>
+declare, create, assign
 step 1: declared array and define data type
 float[] x;
 
@@ -126,7 +153,10 @@ float[] x = new float[3000];
 step 3: assign values to each element
 x[i] = random (0, 500);
 
-array: index, elements
+</section>
+
+<section data-markdown>
+array: index, elements
 int[]x = new int[5];
 x[i] = random (1,10);
 element
@@ -162,7 +192,10 @@ each unit can contain one value
 
 Later on, you can retrieve the value according to the unit number!
 
-arrays…two ways to declare
+</section>
+
+<section data-markdown>
+arrays…two ways to declare
 an array of integers:
 int[] numbers = {1,2,3,4,5,6,7,8,9,10};
 
@@ -175,7 +208,10 @@ this is an array large enough to store 10 elements but the  
 elements have not been specified (or you could say that  
 the array has not been populated)
 
-loops work great with arrays
+</section>
+
+<section data-markdown>
+loops work great with arrays
 index i used to generate x and y values
 float[] x=new float[3000]; //3000 x location
 float[] y=new float[3000]; //3000 y location
@@ -189,7 +225,10 @@ y[i]=random(-10, 200);
 
 }
 
-two uses for index i
+</section>
+
+<section data-markdown>
+two uses for index i
 sketch_2_Array_for_loop.pde
 float[] gray;
 void setup() {
@@ -206,7 +245,10 @@ line (i, 0, i, height);
 }
 }
 
-3000?!
+</section>
+
+<section data-markdown>
+3000?!
 sketch_1_Array_Not_Variables.pde
 
 float[] x=new float[3000]; //3000 x location
@@ -228,7 +270,10 @@ ellipse(x[i], y[i], 10, 10);
 }
 }
 
-shifting the values in an array one place to the right
+</section>
+
+<section data-markdown>
+shifting the values in an array one place to the right
  
 int []x=new int[60];
 int []y=new int[60];
@@ -309,10 +354,16 @@ index
 X
 11
 
-a fun sketches to check out
+</section>
+
+<section data-markdown>
+a fun sketches to check out
 sketch_3_Array_storing_circle_attributes.pde
 
-today
+</section>
+
+<section data-markdown>
+today
 Due: Real-Life Proposal
 Array
 Introduce Final Project
@@ -329,4 +380,4 @@ Objects /
 Final Project - exchange, plan
 Student Presentations
 
-
+</section>
