--- a/lectures/9m-moreArrayObject-Text.html
+++ b/lectures/9m-moreArrayObject-Text.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 9m"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Due: Final Project Proposal
 more Array Objects + Text
@@ -11,7 +20,10 @@ AV + data
 make prototype
 Student Presentations
 
-more Array and Objects
+</section>
+
+<section data-markdown>
+more Array and Objects
 Array>sketch_3_Array_storing_circle_attributes.pde
 if (dist (x[i], y[i], mouseX, mouseY)) <=r[i]{
 }
@@ -21,7 +33,10 @@ int x=0;
 color c = color(random(255), random(255), random(255));
 objects>sketch_8_array_class.pde
 
-more Array and Objects
+</section>
+
+<section data-markdown>
+more Array and Objects
 
 Objects>sketch_8_4_two_constructors.pde
 //constructor #1
@@ -37,13 +52,22 @@ y=tempY;
 r=tempR;
 }
 
-vector text
+</section>
 
-vector text
+<section data-markdown>
+vector text
+
+</section>
+
+<section data-markdown>
+vector text
 
 Text>vector_text
 
-vector text
+</section>
+
+<section data-markdown>
+vector text
 
 Text>vector_text
 PFont zigBlack;
@@ -61,7 +85,10 @@ text("LHR", 50, 270);
 text("TXL", 50, 400);
 }
 
-characters and strings
+</section>
+
+<section data-markdown>
+characters and strings
 character
 a single character inside of single quotes
 char letter = 'A';
@@ -75,7 +102,10 @@ String robot
 = "r2d2";
 String nothing = "";
 
-type
+</section>
+
+<section data-markdown>
+type
 .vlw format is required
 1. create a font in Processing environment
 Tools » Create Font…
@@ -88,17 +118,26 @@ textFont(font) ; //remains in effect until changed
 4. write with font
 text("……", x, y) ;
 
-type
+</section>
+
+<section data-markdown>
+type
 Processing uses fonts in .vlw file format
 Tools > Create Font
 
-useful text functions
+</section>
+
+<section data-markdown>
+useful text functions
 textWidth("...") // Returns width in pixels of string
 textAlign(LEFT) // Other options are RIGHT, CENTER
 textSize(n) // Sets size of font in pixels
 textLeading(x); // Sets the space between the lines
 
-today
+</section>
+
+<section data-markdown>
+today
 Due: Final Project Proposal
 more Array Objects + Text
 rapid fire: proposal presentations
@@ -111,4 +150,4 @@ AV + data
 make prototype
 Student Presentations
 
-
+</section>
