--- a/lectures/10w-Final Presentation Requirements.html
+++ b/lectures/10w-Final Presentation Requirements.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 10w"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Final Project debug
 Student Presentations
@@ -15,7 +24,10 @@ Please practice at home (what to say, how to say, timing)
 Be actively present for everyone’s presentation
 Absolutely no late project accepted
 
-Final Project Presentation
+</section>
+
+<section data-markdown>
+Final Project Presentation
 // Presentation
 Create a presentation (Keynote, Powerpoint, PDF, etc) that
 showcases your entire process, including all steps mentioned
@@ -27,7 +39,10 @@ success. Additionally, you MUST explain the logic of your code
 during your presentation. Your presentation should be 5
 minutes. It will be followed by a quick group critique.
 
-// Digital submit
+</section>
+
+<section data-markdown>
+// Digital submit
 Create a folder titled “lastName firstName”, and drop it off at:
 design_scratchy >_DES Class Files > DES 37 Wntr 2016 Young
 >
@@ -42,4 +57,4 @@ White paper sketchbook sketches
 Graph paper sketches, including pseudo code.
 1-2 page research paper.
 
-
+</section>
