--- a/lectures/8w-Objects.html
+++ b/lectures/8w-Objects.html
@@ -1,3 +1,12 @@
+---
+layout: slide
+title: "Lecture 8w"
+description: 
+theme: black
+transition: slide
+---
+
+<section data-markdown>
 today
 Due: Final Project: proposal, moodboard, research
 Objects /
@@ -11,9 +20,15 @@ Text + AV + data
 rapid fire- proposal presentations: 1 min each
 Student Presentations
 
-objects
+</section>
 
-objects
+<section data-markdown>
+objects
+
+</section>
+
+<section data-markdown>
+objects
 object-oriented programing (OOP)
 purpose:
 to structure long codes more effectively for management
@@ -24,7 +39,10 @@ AND, still have the code work!
 •
 •
 
-codes will now have
+</section>
+
+<section data-markdown>
+codes will now have
 
 2 parts!
 
@@ -32,7 +50,13 @@ two parts, but
 
 one continuous piece of code!
 
-sketch_8_Class_train.pde
+</section>
+
+<section data-markdown>
+</section>
+
+<section data-markdown>
+sketch_8_Class_train.pde
 
 Train.pde
 
@@ -80,7 +104,10 @@ void travel() {
 x++;
 }
 
-define a Class: fields and methods
+</section>
+
+<section data-markdown>
+define a Class: fields and methods
 
 Train.pde
 
@@ -125,7 +152,10 @@ what will it do?
 display on screen
 travel
 
-define a Class: constructor
+</section>
+
+<section data-markdown>
+define a Class: constructor
 
 Train.pde
 
@@ -162,7 +192,10 @@ constructor:
 
 always has the same name as the class
 
-make objects
+</section>
+
+<section data-markdown>
+make objects
 sketch_8_Class_train.pde
 Train lightgray, darkgray;
 
@@ -210,7 +243,10 @@ lightgray will
 display
 travel
 
-class
+</section>
+
+<section data-markdown>
+class
 A class is the specification for an object:
 1. fields
 2. methods
@@ -225,7 +261,10 @@ lightgray.travel();
 darkgray.display();
 //darkgray.travel();
 
-a
+</section>
+
+<section data-markdown>
+a
 
 1
 
@@ -242,7 +281,10 @@ understand the logic
 memorize the syntax!
 variations on it next class!
 
-today
+</section>
+
+<section data-markdown>
+today
 Due: Final Project: proposal, moodboard, research
 Objects /
 Final Project - exchange, plan
@@ -255,4 +297,4 @@ Text + AV + data
 rapid fire- proposal presentations: 1 min each
 Student Presentations
 
-
+</section>
